app.js,config.json,comment.js, were modified

--- a/config/config.json
+++ b/config/config.json
@@ -7,9 +7,17 @@
         "dialect": "mysql"
     },
     "test": {
-
+        "username": "root",
+        "password": "Mgt95543",
+        "database": "tech_blog_db",
+        "host": "localhost",
+        "dialect": "mysql"
     },
     "production": {
-        
+        "username": "root",
+        "password": "Mgt95543",
+        "database": "tech_blog_db",
+        "host": "localhost",
+        "dialect": "mysql"
     }
 }
